# strepsuis_genphennet

./: .zenodo.json  ALGORITHMS.md  BENCHMARKS.md  CASE_STUDIES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT.md  Dockerfile  Network_Analysis_2025_06_26.py  README.md  SECURITY.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md  VALIDATION.md  pyproject.toml  pytest.ini  requirements.txt  strepsuis_genphennet.py
.github/: copilot-instructions.md
analysis_results_91strains/: network_analysis_log.txt  predictive_modeling_report.txt
data/: README.md
examples/: README.md
notebooks/: GenPhenNet_Analysis.ipynb  strepsuis-genphennet_colab_demo.ipynb
strepsuis_genphennet/: __init__.py  advanced_network_analysis.py  analyzer.py  causal_discovery.py  cli.py  config.py  excel_report_utils.py  generate_synthetic_data.py  large_data_integration.py  network_analysis_core.py  optimizations.py  output_handler.py  parallel_chi_square.py  predictive_modeling.py
synthetic_data/: GENERATION_METHODOLOGY.md  generate_synthetic_data.py  synthetic_metadata.json
tests/: conftest.py  test_analyzer.py  test_analyzer_full.py  test_analyzer_module.py  test_basic.py  test_causal_discovery.py  test_chi2_cramers_functions.py  test_cli.py  test_cli_full.py  test_cli_module.py  test_comprehensive_real_data.py  test_config.py  test_config_extended.py  test_core_functions_extended.py  test_coverage_boost_causal_predictive.py  test_coverage_boost_main_pipeline.py  test_coverage_boost_network_core.py  test_coverage_boost_optimizations.py  test_coverage_final_push.py  test_data_backend.py  test_end_to_end.py  test_entropy_and_exclusive.py  test_entropy_functions.py  test_excel_report_detailed.py  test_excel_report_gen.py  test_excel_report_utils.py  test_file_matching.py  test_full_analysis.py  test_full_pipeline_real.py  test_helper_functions_extended.py  test_information_theory.py  test_main_pipeline_coverage.py  test_mathematical_validation.py  test_mutually_exclusive.py  test_network_analysis_core.py  test_network_building.py  test_network_core_extended.py  test_network_functions.py  test_optimizations.py  test_parallel_chi_square.py  (+25 more)
(+12 files in other folders)
